using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class UnitData : MonoBehaviour
{
    public string Name;
    public string Type;
    public string AttackType;
    public Team Team;
    public float MaxHp;
    public float HP;
    public int Rank;
    public float Damage;
    public float AttackDistance;
    public float AttackRate;
    public float MoveSpeed;
    public bool Triple;
    public bool isDead = false;
}
