using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class DieState : IUnitState
{
    private UnitController unitController;
    public DieState(UnitController unitController) => this.unitController = unitController;

    public void Enter()
    {
        
    }

    public void Update()
    {
        
    }

    public void Exit()
    {
        
    }
}
